--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pyinstaller",
+    "python-json-logger>=3.3.0",
+    "rich>=13.9.4",
     "typer",
 ]
